--- a/Assignment_No_1.ipynb
+++ b/Assignment_No_1.ipynb
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eJqA63AfElyi",
-        "outputId": "2aea45bb-09cd-4069-c795-58d816780467"
+        "outputId": "c5f71a0c-4dac-47f6-e8a4-e4c1cb1e16ca"
       },
       "outputs": [
         {
@@ -48,7 +48,7 @@
             "yes\n",
             "Please enter a valid email id to proceed\n",
             "\n",
-            "Enter your Email id:  praveen@kkk.com\n",
+            "Enter your Email id:  xxx@xxx.com\n",
             "Valid email\n",
             "\n",
             "PASSWORD Instructions:\n",
@@ -58,68 +58,18 @@
             "  4)Either of the special characters-@#$! \n",
             " \n",
             "Please enter your Password: \n",
-            "P@ssword1234\n",
+            "P@ssword999\n",
             "Password is valid\n",
             "\n",
-            "The correct Password is P@ssword1234\n",
+            "The correct Password is P@ssword999\n",
             "Your have been successfully registered\n",
             "\n",
             "Please provide your username. We need to verify whether it is registered!\n",
-            "Enter your Username : praveen@kkk.xom\n",
-            "Username does not exists\n",
-            "Please create a new user id :\n",
-            "Enter your email id to register:  praveen@kk.com\n",
-            "Valid email\n",
-            "\n",
-            "Please enter your Password: \n",
-            "12345@i\n",
-            "Password length should be from 8 to 16 characters. Please enter a valid Password\n",
-            "Do you want to enter correct password now? press (Y/y)\n",
-            "Y\n",
-            "Please enter your Password: \n",
-            "12345@\n",
-            "Password length should be from 8 to 16 characters. Please enter a valid Password\n",
-            "Do you want to enter correct password now? press (Y/y)\n",
-            "P@ssword1234\n",
-            "Your have been successfully registered\n",
-            "\n",
-            "Enter the user-id: praveenkalpana\n",
-            "Enter the Password: P@ssword1234\n",
-            "Invalid Credentials\n",
-            "Have you forgotten your Password? Type YES to retrieve or NO to create a new password\n",
-            "YES\n",
-            "Enter the user-id: praveen@kk.com\n",
-            "User-id not found\n",
-            "Please create a new user id :\n",
-            "Enter your email id to register:  praveen@kkk.com\n",
-            "Valid email\n",
-            "\n",
-            "Please enter your Password: \n",
-            "P@ssword1234\n",
-            "Password is valid\n",
-            "\n",
-            "Your have been successfully registered\n",
-            "\n",
-            "Enter the user-id: praveen@kkk.com\n",
-            "Enter the Password: P@ssword1234\n",
-            "You are now logged in\n",
-            "User-id not found\n",
-            "Please create a new user id :\n",
-            "Enter your email id to register:  praveen@kkk.com\n",
-            "Valid email\n",
-            "\n",
-            "Please enter your Password: \n",
-            "P@ssword1234\n",
-            "Password is valid\n",
-            "\n",
-            "Your have been successfully registered\n",
-            "\n",
-            "Enter the user-id:  praveen@kkk.com\n",
-            "Enter the Password: ssword1234\n",
-            "Invalid Credentials\n",
-            "Have you forgotten your Password? Type YES to retrieve or NO to create a new password\n",
-            "NO\n",
-            "The password is:  \n"
+            "Enter your Username : xxx@xxx.com\n",
+            "User Name exists! You may now proceed to login!\n",
+            "Enter the user-id: xxx@xxx.com\n",
+            "Enter the Password: P@ssword999\n",
+            "You are now logged in\n"
           ]
         }
       ],
